package org.vulcan.light.designpattern.creational.abstractfactory.definition;

/**
 * @author Sam Lu
 * @date 2020/12/6
 */
public class ProductA2 implements AbstractProductA {

    @Override
    public void use() {
        System.out.println("Use Product A2.");
    }

}
