package org.vulcan.light.designpattern.creational.abstractfactory.definition;

/**
 * @author Sam Lu
 * @date 2020/12/6
 */
public class ProductB1 implements AbstractProductB {

    @Override
    public void use() {
        System.out.println("Use Product B1.");
    }

}
