@startuml
class ProductA1 implements AbstractProductA
class ProductA2 implements AbstractProductA
class ProductB1 implements AbstractProductB
class ProductB2 implements AbstractProductB

class ConcreteFactory1 implements AbstractFactory
class ConcreteFactory2 implements AbstractFactory
AbstractFactory : createProductA()
AbstractFactory : createProductB()
ConcreteFactory1 : createProductA()
ConcreteFactory1 : createProductB()
ConcreteFactory2 : createProductA()
ConcreteFactory2 : createProductB()

ConcreteFactory1 ..> ProductA1
ConcreteFactory1 ..> ProductB1
ConcreteFactory2 ..> ProductA2
ConcreteFactory2 ..> ProductB2

Client --> AbstractFactory
Client --> AbstractProductA
Client --> AbstractProductB
@enduml